--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,26 +17,25 @@ body {
   padding: 0;
   font-family: KozGoPro_Light;
   font-size: 16px;
-  width: 1400px;
 }
 
 .top-nav {
   background-color: #fff;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   position: relative;
   &_logo {
     font-family: KozGoPro_Heavy;
     color: $primary;
     font-size: 36px;
-    padding: 10px 10px 10px 25px;
   }
   &_menu {
     display: flex;
+    margin-right: 10rem;
   }
   &_items {
     list-style: none;
-    padding-top: 13px;
-    padding-left: 47px;
     display: flex;
     & li {
       margin-right: 39px;
@@ -58,8 +57,6 @@ body {
   &_user {
     display: flex;
     align-items: center;
-    margin-left: 195px;
-    margin-top: 4px;
     & img {
       width: 42px;
       height: 42px;
@@ -74,24 +71,21 @@ body {
     width: 110px;
     height: 90px;
     background-color: $active-color;
-    margin-left: 36px;
     display: flex;
     justify-content: center;
     align-items: center;
     &-circle {
-        width: 41px;
-        height: 41px;
-        border: 2px solid white;
-        border-radius: 50%;
-        background-color: $active-color;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        & i {
-            color: white;
-            
-        }
+      width: 41px;
+      height: 41px;
+      border: 2px solid white;
+      border-radius: 50%;
+      background-color: $active-color;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      & i {
+        color: white;
+      }
     }
   }
 }
-
