--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,6 +29,7 @@ body {
     font-family: KozGoPro_Heavy;
     color: $primary;
     font-size: 36px;
+    cursor: pointer;
   }
   &_menu {
     display: flex;
@@ -57,6 +58,7 @@ body {
   &_user {
     display: flex;
     align-items: center;
+    cursor: pointer;
     & img {
       width: 42px;
       height: 42px;
@@ -83,6 +85,7 @@ body {
       display: flex;
       justify-content: center;
       align-items: center;
+      cursor: pointer;
       & i {
         color: white;
       }
