--- a/scss/style.css
+++ b/scss/style.css
@@ -115,6 +115,10 @@ body {
   margin-left: 7px;
 }
 
+.top-nav_user h3:hover {
+  opacity: 0.5;
+}
+
 .top-nav_button {
   width: 110px;
   height: 90px;
@@ -146,6 +150,10 @@ body {
       -ms-flex-align: center;
           align-items: center;
   cursor: pointer;
+}
+
+.top-nav_button-circle:hover {
+  opacity: 0.5;
 }
 
 .top-nav_button-circle i {
