--- a/scss/style.css
+++ b/scss/style.css
@@ -440,4 +440,98 @@ body {
   border-radius: 50%;
   background-color: #fff;
 }
+
+.content-block2 {
+  margin-bottom: 85px;
+  padding: 55px 55px 75px 55px;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+.content-block2 h1 {
+  font-size: 35px;
+  font-family: KozGoPro_Medium;
+  color: #ef3139;
+  text-align: center;
+}
+
+.content-block2-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 50px;
+}
+
+.content-block2-item_img {
+  width: 98px;
+  height: 87px;
+  background-color: #00aced;
+  border-radius: 10px;
+  padding: 20px 28px;
+  margin-right: 20px;
+}
+
+.content-block2-item_img_pink {
+  background-color: #ff4181;
+}
+
+.content-block2-item_h {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: #383838;
+  text-transform: uppercase;
+}
+
+.content-block2-item_h h2 {
+  font-size: 26px;
+  font-family: KozGoPro_Medium;
+}
+
+.content-block2-item_h h3 {
+  margin-left: 10px;
+  font-size: 20px;
+  font-family: KozGoPro_Light;
+}
+
+.content-block2-item_h__items h3 {
+  font-size: 16px;
+}
+
+.content-block2-item_h__items h3::before {
+  content: '';
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background-color: #383838;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.content-block3 {
+  margin-bottom: 55px;
+  background-color: #ef3139;
+  padding: 65px 110px 85px 110px;
+  color: #fff;
+}
+
+.content-block3 h1 {
+  font-size: 36px;
+  font-family: KozGoPro_Bold;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.content-block3 h2 {
+  font-size: 26px;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.content-block3 p {
+  font-size: 22px;
+  line-height: 1.864;
+}
 /*# sourceMappingURL=style.css.map */
